src/language/src/parser/vacgrammarParser.cpp

// Generated from vacgrammar.g4 by ANTLR 4.7


#include "vacgrammarListener.h"

#include "vacgrammarParser.h"


using namespace antlrcpp;
using namespace SMT;
using namespace antlr4;

vacgrammarParser::vacgrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

vacgrammarParser::~vacgrammarParser() {
  delete _interpreter;
}

std::string vacgrammarParser::getGrammarFileName() const {
  return "vacgrammar.g4";
}

const std::vector<std::string>& vacgrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& vacgrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

vacgrammarParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<vacgrammarParser::R_startContext *> vacgrammarParser::FileContext::r_start() {
  return getRuleContexts<vacgrammarParser::R_startContext>();
}

vacgrammarParser::R_startContext* vacgrammarParser::FileContext::r_start(size_t i) {
  return getRuleContext<vacgrammarParser::R_startContext>(i);
}


size_t vacgrammarParser::FileContext::getRuleIndex() const {
  return vacgrammarParser::RuleFile;
}

void vacgrammarParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void vacgrammarParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

vacgrammarParser::FileContext* vacgrammarParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, vacgrammarParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(44);
      r_start();
      setState(47); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << vacgrammarParser::USER)
      | (1ULL << vacgrammarParser::ATTR)
      | (1ULL << vacgrammarParser::INIT)
      | (1ULL << vacgrammarParser::RULE)
      | (1ULL << vacgrammarParser::QUERY))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_startContext ------------------------------------------------------------------

vacgrammarParser::R_startContext::R_startContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::R_userContext* vacgrammarParser::R_startContext::r_user() {
  return getRuleContext<vacgrammarParser::R_userContext>(0);
}

vacgrammarParser::R_attrContext* vacgrammarParser::R_startContext::r_attr() {
  return getRuleContext<vacgrammarParser::R_attrContext>(0);
}

vacgrammarParser::R_initContext* vacgrammarParser::R_startContext::r_init() {
  return getRuleContext<vacgrammarParser::R_initContext>(0);
}

vacgrammarParser::R_rulesContext* vacgrammarParser::R_startContext::r_rules() {
  return getRuleContext<vacgrammarParser::R_rulesContext>(0);
}

vacgrammarParser::R_queryContext* vacgrammarParser::R_startContext::r_query() {
  return getRuleContext<vacgrammarParser::R_queryContext>(0);
}


size_t vacgrammarParser::R_startContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_start;
}

void vacgrammarParser::R_startContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_start(this);
}

void vacgrammarParser::R_startContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_start(this);
}

vacgrammarParser::R_startContext* vacgrammarParser::r_start() {
  R_startContext *_localctx = _tracker.createInstance<R_startContext>(_ctx, getState());
  enterRule(_localctx, 2, vacgrammarParser::RuleR_start);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vacgrammarParser::USER: {
        enterOuterAlt(_localctx, 1);
        setState(49);
        r_user();
        break;
      }

      case vacgrammarParser::ATTR: {
        enterOuterAlt(_localctx, 2);
        setState(50);
        r_attr();
        break;
      }

      case vacgrammarParser::INIT: {
        enterOuterAlt(_localctx, 3);
        setState(51);
        r_init();
        break;
      }

      case vacgrammarParser::RULE: {
        enterOuterAlt(_localctx, 4);
        setState(52);
        r_rules();
        break;
      }

      case vacgrammarParser::QUERY: {
        enterOuterAlt(_localctx, 5);
        setState(53);
        r_query();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_userContext ------------------------------------------------------------------

vacgrammarParser::R_userContext::R_userContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::R_userContext::USER() {
  return getToken(vacgrammarParser::USER, 0);
}

tree::TerminalNode* vacgrammarParser::R_userContext::SEMI() {
  return getToken(vacgrammarParser::SEMI, 0);
}

std::vector<vacgrammarParser::User_elementContext *> vacgrammarParser::R_userContext::user_element() {
  return getRuleContexts<vacgrammarParser::User_elementContext>();
}

vacgrammarParser::User_elementContext* vacgrammarParser::R_userContext::user_element(size_t i) {
  return getRuleContext<vacgrammarParser::User_elementContext>(i);
}


size_t vacgrammarParser::R_userContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_user;
}

void vacgrammarParser::R_userContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_user(this);
}

void vacgrammarParser::R_userContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_user(this);
}

vacgrammarParser::R_userContext* vacgrammarParser::r_user() {
  R_userContext *_localctx = _tracker.createInstance<R_userContext>(_ctx, getState());
  enterRule(_localctx, 4, vacgrammarParser::RuleR_user);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(vacgrammarParser::USER);
    setState(58); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(57);
      user_element();
      setState(60); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::Identifier);
    setState(62);
    match(vacgrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- User_elementContext ------------------------------------------------------------------

vacgrammarParser::User_elementContext::User_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::User_elementContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::User_elementContext::STAR() {
  return getToken(vacgrammarParser::STAR, 0);
}


size_t vacgrammarParser::User_elementContext::getRuleIndex() const {
  return vacgrammarParser::RuleUser_element;
}

void vacgrammarParser::User_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUser_element(this);
}

void vacgrammarParser::User_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUser_element(this);
}

vacgrammarParser::User_elementContext* vacgrammarParser::user_element() {
  User_elementContext *_localctx = _tracker.createInstance<User_elementContext>(_ctx, getState());
  enterRule(_localctx, 6, vacgrammarParser::RuleUser_element);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(vacgrammarParser::Identifier);
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vacgrammarParser::STAR) {
      setState(65);
      match(vacgrammarParser::STAR);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_attrContext ------------------------------------------------------------------

vacgrammarParser::R_attrContext::R_attrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::R_attrContext::ATTR() {
  return getToken(vacgrammarParser::ATTR, 0);
}

tree::TerminalNode* vacgrammarParser::R_attrContext::SEMI() {
  return getToken(vacgrammarParser::SEMI, 0);
}

std::vector<vacgrammarParser::Attr_elementContext *> vacgrammarParser::R_attrContext::attr_element() {
  return getRuleContexts<vacgrammarParser::Attr_elementContext>();
}

vacgrammarParser::Attr_elementContext* vacgrammarParser::R_attrContext::attr_element(size_t i) {
  return getRuleContext<vacgrammarParser::Attr_elementContext>(i);
}


size_t vacgrammarParser::R_attrContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_attr;
}

void vacgrammarParser::R_attrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_attr(this);
}

void vacgrammarParser::R_attrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_attr(this);
}

vacgrammarParser::R_attrContext* vacgrammarParser::r_attr() {
  R_attrContext *_localctx = _tracker.createInstance<R_attrContext>(_ctx, getState());
  enterRule(_localctx, 8, vacgrammarParser::RuleR_attr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(vacgrammarParser::ATTR);
    setState(70); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(69);
      attr_element();
      setState(72); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::Identifier);
    setState(74);
    match(vacgrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attr_elementContext ------------------------------------------------------------------

vacgrammarParser::Attr_elementContext::Attr_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::LEFTBRACKET() {
  return getToken(vacgrammarParser::LEFTBRACKET, 0);
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::Constant() {
  return getToken(vacgrammarParser::Constant, 0);
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::RIGHTBRACKET() {
  return getToken(vacgrammarParser::RIGHTBRACKET, 0);
}


size_t vacgrammarParser::Attr_elementContext::getRuleIndex() const {
  return vacgrammarParser::RuleAttr_element;
}

void vacgrammarParser::Attr_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttr_element(this);
}

void vacgrammarParser::Attr_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttr_element(this);
}

vacgrammarParser::Attr_elementContext* vacgrammarParser::attr_element() {
  Attr_elementContext *_localctx = _tracker.createInstance<Attr_elementContext>(_ctx, getState());
  enterRule(_localctx, 10, vacgrammarParser::RuleAttr_element);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(vacgrammarParser::Identifier);
    setState(77);
    match(vacgrammarParser::LEFTBRACKET);
    setState(78);
    match(vacgrammarParser::Constant);
    setState(79);
    match(vacgrammarParser::RIGHTBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_initContext ------------------------------------------------------------------

vacgrammarParser::R_initContext::R_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::R_initContext::INIT() {
  return getToken(vacgrammarParser::INIT, 0);
}

tree::TerminalNode* vacgrammarParser::R_initContext::SEMI() {
  return getToken(vacgrammarParser::SEMI, 0);
}

std::vector<vacgrammarParser::Init_elementContext *> vacgrammarParser::R_initContext::init_element() {
  return getRuleContexts<vacgrammarParser::Init_elementContext>();
}

vacgrammarParser::Init_elementContext* vacgrammarParser::R_initContext::init_element(size_t i) {
  return getRuleContext<vacgrammarParser::Init_elementContext>(i);
}


size_t vacgrammarParser::R_initContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_init;
}

void vacgrammarParser::R_initContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_init(this);
}

void vacgrammarParser::R_initContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_init(this);
}

vacgrammarParser::R_initContext* vacgrammarParser::r_init() {
  R_initContext *_localctx = _tracker.createInstance<R_initContext>(_ctx, getState());
  enterRule(_localctx, 12, vacgrammarParser::RuleR_init);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(vacgrammarParser::INIT);
    setState(83); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(82);
      init_element();
      setState(85); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::LEFTTUPLE);
    setState(87);
    match(vacgrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Init_elementContext ------------------------------------------------------------------

vacgrammarParser::Init_elementContext::Init_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::LEFTTUPLE() {
  return getToken(vacgrammarParser::LEFTTUPLE, 0);
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::RIGHTTUPLE() {
  return getToken(vacgrammarParser::RIGHTTUPLE, 0);
}

std::vector<tree::TerminalNode *> vacgrammarParser::Init_elementContext::COMMA() {
  return getTokens(vacgrammarParser::COMMA);
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::COMMA(size_t i) {
  return getToken(vacgrammarParser::COMMA, i);
}

std::vector<vacgrammarParser::Init_assignmentContext *> vacgrammarParser::Init_elementContext::init_assignment() {
  return getRuleContexts<vacgrammarParser::Init_assignmentContext>();
}

vacgrammarParser::Init_assignmentContext* vacgrammarParser::Init_elementContext::init_assignment(size_t i) {
  return getRuleContext<vacgrammarParser::Init_assignmentContext>(i);
}


size_t vacgrammarParser::Init_elementContext::getRuleIndex() const {
  return vacgrammarParser::RuleInit_element;
}

void vacgrammarParser::Init_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit_element(this);
}

void vacgrammarParser::Init_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit_element(this);
}

vacgrammarParser::Init_elementContext* vacgrammarParser::init_element() {
  Init_elementContext *_localctx = _tracker.createInstance<Init_elementContext>(_ctx, getState());
  enterRule(_localctx, 14, vacgrammarParser::RuleInit_element);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(vacgrammarParser::LEFTTUPLE);
    setState(90);
    match(vacgrammarParser::Identifier);
    setState(93); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(91);
      match(vacgrammarParser::COMMA);
      setState(92);
      init_assignment();
      setState(95); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::COMMA);
    setState(97);
    match(vacgrammarParser::RIGHTTUPLE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Init_assignmentContext ------------------------------------------------------------------

vacgrammarParser::Init_assignmentContext::Init_assignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::Init_assignmentContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::Init_assignmentContext::EQUAL() {
  return getToken(vacgrammarParser::EQUAL, 0);
}

tree::TerminalNode* vacgrammarParser::Init_assignmentContext::Constant() {
  return getToken(vacgrammarParser::Constant, 0);
}


size_t vacgrammarParser::Init_assignmentContext::getRuleIndex() const {
  return vacgrammarParser::RuleInit_assignment;
}

void vacgrammarParser::Init_assignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit_assignment(this);
}

void vacgrammarParser::Init_assignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit_assignment(this);
}

vacgrammarParser::Init_assignmentContext* vacgrammarParser::init_assignment() {
  Init_assignmentContext *_localctx = _tracker.createInstance<Init_assignmentContext>(_ctx, getState());
  enterRule(_localctx, 16, vacgrammarParser::RuleInit_assignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(vacgrammarParser::Identifier);
    setState(100);
    match(vacgrammarParser::EQUAL);
    setState(101);
    match(vacgrammarParser::Constant);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryExpressionContext ------------------------------------------------------------------

vacgrammarParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::Constant() {
  return getToken(vacgrammarParser::Constant, 0);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::DOT() {
  return getToken(vacgrammarParser::DOT, 0);
}

std::vector<tree::TerminalNode *> vacgrammarParser::PrimaryExpressionContext::Identifier() {
  return getTokens(vacgrammarParser::Identifier);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::Identifier(size_t i) {
  return getToken(vacgrammarParser::Identifier, i);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::LEFTPAREN() {
  return getToken(vacgrammarParser::LEFTPAREN, 0);
}

vacgrammarParser::ExpressionContext* vacgrammarParser::PrimaryExpressionContext::expression() {
  return getRuleContext<vacgrammarParser::ExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::RIGHTPAREN() {
  return getToken(vacgrammarParser::RIGHTPAREN, 0);
}


size_t vacgrammarParser::PrimaryExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RulePrimaryExpression;
}

void vacgrammarParser::PrimaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimaryExpression(this);
}

void vacgrammarParser::PrimaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimaryExpression(this);
}

vacgrammarParser::PrimaryExpressionContext* vacgrammarParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, vacgrammarParser::RulePrimaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vacgrammarParser::Constant: {
        enterOuterAlt(_localctx, 1);
        setState(103);
        match(vacgrammarParser::Constant);
        break;
      }

      case vacgrammarParser::Identifier: {
        enterOuterAlt(_localctx, 2);
        setState(104);
        dynamic_cast<PrimaryExpressionContext *>(_localctx)->u = match(vacgrammarParser::Identifier);
        setState(105);
        match(vacgrammarParser::DOT);
        setState(106);
        dynamic_cast<PrimaryExpressionContext *>(_localctx)->a = match(vacgrammarParser::Identifier);
        break;
      }

      case vacgrammarParser::LEFTPAREN: {
        enterOuterAlt(_localctx, 3);
        setState(107);
        match(vacgrammarParser::LEFTPAREN);
        setState(108);
        expression();
        setState(109);
        match(vacgrammarParser::RIGHTPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExpressionContext ------------------------------------------------------------------

vacgrammarParser::UnaryExpressionContext::UnaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::PrimaryExpressionContext* vacgrammarParser::UnaryExpressionContext::primaryExpression() {
  return getRuleContext<vacgrammarParser::PrimaryExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::UnaryExpressionContext::NOT() {
  return getToken(vacgrammarParser::NOT, 0);
}

vacgrammarParser::UnaryExpressionContext* vacgrammarParser::UnaryExpressionContext::unaryExpression() {
  return getRuleContext<vacgrammarParser::UnaryExpressionContext>(0);
}


size_t vacgrammarParser::UnaryExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RuleUnaryExpression;
}

void vacgrammarParser::UnaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnaryExpression(this);
}

void vacgrammarParser::UnaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnaryExpression(this);
}

vacgrammarParser::UnaryExpressionContext* vacgrammarParser::unaryExpression() {
  UnaryExpressionContext *_localctx = _tracker.createInstance<UnaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 20, vacgrammarParser::RuleUnaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vacgrammarParser::LEFTPAREN:
      case vacgrammarParser::Identifier:
      case vacgrammarParser::Constant: {
        enterOuterAlt(_localctx, 1);
        setState(113);
        primaryExpression();
        break;
      }

      case vacgrammarParser::NOT: {
        enterOuterAlt(_localctx, 2);
        setState(114);
        match(vacgrammarParser::NOT);
        setState(115);
        unaryExpression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EqualityExpressionContext ------------------------------------------------------------------

vacgrammarParser::EqualityExpressionContext::EqualityExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::UnaryExpressionContext* vacgrammarParser::EqualityExpressionContext::unaryExpression() {
  return getRuleContext<vacgrammarParser::UnaryExpressionContext>(0);
}

vacgrammarParser::EqualityExpressionContext* vacgrammarParser::EqualityExpressionContext::equalityExpression() {
  return getRuleContext<vacgrammarParser::EqualityExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::EqualityExpressionContext::EQUAL() {
  return getToken(vacgrammarParser::EQUAL, 0);
}


size_t vacgrammarParser::EqualityExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RuleEqualityExpression;
}

void vacgrammarParser::EqualityExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEqualityExpression(this);
}

void vacgrammarParser::EqualityExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEqualityExpression(this);
}


vacgrammarParser::EqualityExpressionContext* vacgrammarParser::equalityExpression() {
   return equalityExpression(0);
}

vacgrammarParser::EqualityExpressionContext* vacgrammarParser::equalityExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  vacgrammarParser::EqualityExpressionContext *_localctx = _tracker.createInstance<EqualityExpressionContext>(_ctx, parentState);
  vacgrammarParser::EqualityExpressionContext *previousContext = _localctx;
  size_t startState = 22;
  enterRecursionRule(_localctx, 22, vacgrammarParser::RuleEqualityExpression, precedence);

    
